Kubernetes-Manifests-file/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  namespace: three-tier
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host:
    http:
      paths:
      - pathType: Prefix
        path: /api
        backend:
          service:
            name: api
            port:
              number: 3500
      - pathType: Prefix
        path: /
        backend:
          service:
            name: frontend
            port:
              number: 3000
